--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <!--  <base href="https://fishofeyes.github.io/json_to_dart/">-->
-  <base href="/">
+  <base href="https://fishofeyes.github.io/json_to_dart/">
+<!--  <base href="/">-->
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
@@ -39,7 +39,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    const serviceWorkerVersion = "3091190213";
+    const serviceWorkerVersion = "2374786822";
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
